# helix

./: Cargo.toml
helix-claude-ide/: Cargo.toml
helix-claude-ide/src/: command.rs  lib.rs  lockfile.rs  mcp.rs  notification.rs  protocol.rs  server.rs  snapshot.rs  tools.rs
helix-term/: Cargo.toml
helix-term/src/: application.rs  commands.rs  handlers.rs
helix-term/src/commands/: typed.rs
helix-term/src/handlers/: claude_ide.rs
helix-term/src/keymap/: default.rs
helix-view/src/: editor.rs
