[package]
name = "helix-claude-ide"
description = "Claude Code IDE integration for Helix (WebSocket MCP server)"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1"
arc-swap.workspace = true
futures-util.workspace = true
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "macros", "time", "io-util"] }
tokio-tungstenite = "0.26"
uuid = { version = "1", features = ["v4"] }
similar = "2"
etcetera.workspace = true

helix-core = { path = "../helix-core" }
helix-view = { path = "../helix-view" }
helix-event = { path = "../helix-event" }
helix-lsp-types = { path = "../helix-lsp-types" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
